--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,12 @@
   "eslintConfig": {
     "extends": [
       "react-app"
-    ]
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": "off",
+      "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+      "no-useless-escape": "warn"
+    }
   },
   "browserslist": {
     "production": [
