Add Netlify deployment configuration

--- a/vercel.json
+++ b/vercel.json
@@ -25,6 +25,12 @@
   ],
   "env": {
     "NODE_ENV": "production"
+  },
+  "build": {
+    "env": {
+      "DISABLE_ESLINT_PLUGIN": "true",
+      "GENERATE_SOURCEMAP": "false"
+    }
   }
 }
 
