--- a/vercel.json
+++ b/vercel.json
@@ -31,6 +31,11 @@
       "DISABLE_ESLINT_PLUGIN": "true",
       "GENERATE_SOURCEMAP": "false"
     }
+  },
+  "functions": {
+    "server/index.js": {
+      "includeFiles": "server/**"
+    }
   }
 }
 
